src/test/ui/issues/issue-15129.stderr
error[E0004]: non-exhaustive patterns: `(T1(()), V2(_))` not covered
  --> $DIR/issue-15129.rs:12:11
   |
LL |     match (T::T1(()), V::V2(true)) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^ pattern `(T1(()), V2(_))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
